--- a/src/app.css
+++ b/src/app.css
@@ -6,20 +6,31 @@
 	display: none;
 }
 
-input, textarea, button, select, a {
+/* input, */
+textarea,
+button,
+select,
+a {
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 	appearance: none;
 	-moz-appearance: none;
 	-webkit-appearance: none;
 }
 
-*:focus, *:active {
+*:focus,
+*:active {
 	outline: none !important;
 	-webkit-tap-highlight-color: transparent !important;
 }
 
 h3 {
 	font-weight: bold;
-	font-size: 1.5rem; /* text-2xl에 해당하는 크기로 조정 */
-	color: #4a5568; /* text-gray-700에 해당하는 색상으로 조정 */
-  }
+	font-size: 1.3rem;
+	color: #4a5568;
+}
+
+h4 {
+	font-weight: bold;
+	font-size: 1.1rem;
+	color: #4a5568;
+}
