--- a/src/app.css
+++ b/src/app.css
@@ -23,10 +23,18 @@ a {
 	-webkit-tap-highlight-color: transparent !important;
 }
 
+h2 {
+	font-weight: bold;
+	font-size: 1.5rem;
+	color: #000000;
+	margin-top: 4rem;
+	margin-bottom: 1rem;
+}
+
 h3 {
 	font-weight: bold;
 	font-size: 1.3rem;
-	color: #4a5568;
+	color: #393636;
 }
 
 h4 {
